--- a/spot-oa/ui/config/plugins.html
+++ b/spot-oa/ui/config/plugins.html
@@ -36,7 +36,7 @@
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="../images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/apple-icon-60x60.png"
+    <link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/apple-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="114x114" href="../images/favicon/apple-icon-114x114.png">
